frontend/test/should_pass/basic_069.grg
rule r
{
	-e->;
	x:Node -e:Edge-> y:Node;
	
	replace{}
}