frontend/test/should_fail/reuse_008.grg
rule r {
	x: Node;
	y: Node;
	x -e:Edge-> y;

	replace{
		y -e- x;
	}
}
